syntax = "proto3";

option go_package = "/genproto/transport";

package transport;

import "common.proto";
import "road.proto";

service MaintanceService {
    rpc CreateMaintranceSchedule(MaintanceScheduleCreate) returns (MaintanceScheduleRes) {}
    rpc UpdateMaintranceSchedule(MaintanceScheduleUpdate) returns (MaintanceScheduleRes) {}
    rpc DeleteMaintranceSchedule(ById) returns (Void) {}
    rpc GetAllMaintanceSchedules(MaintanceScheduleFilter) returns (MaintanceScheduleList) {}
}
message MaintanceScheduleCreate {
    string RoadId = 1;
    string StartPoint = 2;
    string EndPoint = 3;
    string StartDate = 4;
    string EndDate = 5;
    string Organizer = 6;
    string Status = 7;
    string TotalArea = 8;
}
message MaintanceScheduleUpdate {
    string ScheduleId = 1;
    string RoadId = 2;
    string StartPoint = 3;
    string EndPoint = 4;
    string StartDate = 5;
    string EndDate = 6;
    string Organizer = 7;
    string Status = 8;
    string TotalArea = 9;
}
message MaintanceSchedule {
    string Id = 1;
    string RoadId = 2;
    string StartPoint = 3;
    string EndPoint = 4;
    string StartDate = 5;
    string EndDate = 6;
    string Organizer = 7;
    string Status = 8;
    string TotalArea = 9;
    string CreatedAt = 10;
    string UpdatedAt = 11;
    string DeletedAt = 12;
}
message MaintanceScheduleRes {
    string Id = 1;
    RoadRes Road = 2;
    string StartPoint = 3;
    string EndPoint = 4;
    string StartDate = 5;
    string EndDate = 6;
    string Organizer = 7;
    string Status = 8;
    string TotalArea = 9;
}
message MaintanceScheduleFilter {
    string StartDate = 1;
    string EndDate = 2;
    string Organizer = 3;
    string Status = 4;
    string RoadId = 5;
    Filter filter = 6;
}
message MaintanceScheduleList {
    repeated MaintanceScheduleRes Schedules = 1;
    int32 Count = 2;
}